# relay-tty

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PROTOCOL.md  README.md  install.sh  mkdocs.yml  package-lock.json  package.json  pyproject.toml  server.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.claude/: work-queue.md
.claude/commands/: release.md
.claude/work-queue/: activity-elapsed-fix.md  add-to-homescreen-guide.md  android-ime-corrections.md  browser-buffer-cache.md  cli-qr-auth.md  clipboard-image-paste.md  clipboard-sync.md  copyable-session-ids.md  ctrl-shortcut-menu.md  cwd-propagation-fix.md  desktop-grid-view.md  (+79 more)
app/: app.css  context.ts  root.tsx  routes.ts
cli/: attach.ts  config.ts  index.ts  preview.ts  sessions.ts  spawn.ts  tui.ts  tunnel-config.ts
crates/pty-host/: Cargo.toml
crates/pty-host/src/: main.rs
crates/pty-host/tests/: integration.rs
crates/pty-host/tests/common/: mod.rs
docs/: next.config.mjs  package-lock.json  package.json  protocol.md  publish.md  testing.md  windows-support.md  work-queue-archive.md
promo/: make-promo.sh
public/: manifest.webmanifest  offline.html  sw.js
scripts/: postinstall.js
server/: api.ts  app.ts  auth.ts  log.ts  notification-store.ts  notify.ts  output-buffer.ts  projects.ts  pty-host.ts  pty-manager.ts  push-store.ts  session-store.ts  tunnel-client.ts  ws-handler.ts
service/: install.ts
shared/: framing.ts  spawn-utils.ts  tile-layout.ts  tunnel.ts  types.ts
test/: framing.test.ts  output-buffer.test.ts  tile-layout.test.ts
website/: CNAME  index.md
(+167 files in other folders)
