[package]
name = "relay-pty-host"
version = "0.1.0"
edition = "2021"
description = "Standalone PTY host process for relay-tty"

[[bin]]
name = "relay-pty-host"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
nix = { version = "0.29", features = ["term", "process", "signal", "fs"] }
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"

[profile.release]
strip = true
lto = true
opt-level = "z"
